# swagger.json
@@ -306,17 +306,29 @@
                         "required": true
                     },
                     {
+                        "type": "boolean",
+                        "name": "mode",
+                        "in": "formData"
+                    },
+                    {
                         "type": "string",
-                        "name": "to_account_id",
-                        "in": "formData",
-                        "required": true
+                        "name": "page_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "page_size",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "success response",
                         "schema": {
-                            "$ref": "#/definitions/controller.SuccessResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.FollowResponse"
+                            }
                         }
                     },
                     "400": {
@@ -403,7 +415,7 @@
                     },
                     {
                         "type": "string",
-                        "name": "to_account_id",
+                        "name": "account_id",
                         "in": "formData",
                         "required": true
                     }
@@ -609,17 +621,17 @@
                     {
                         "type": "boolean",
                         "name": "expired",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "name": "page_id",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "name": "page_size",
-                        "in": "formData"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -747,6 +759,222 @@
                             "items": {
                                 "$ref": "#/definitions/repository.Locate"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/pastworks": {
+            "get": {
+                "description": "List PastWork",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "PastWorks"
+                ],
+                "summary": "List PastWork",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "page_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.ListPastWorkResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a past work from the requested body",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "PastWorks"
+                ],
+                "summary": "Create new past work",
+                "parameters": [
+                    {
+                        "description": "Create PastWork Request",
+                        "name": "CreatePastWorkRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.PastWorkRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "create success response",
+                        "schema": {
+                            "$ref": "#/definitions/domain.PastWorkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "server error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/pastworks/{opus}": {
+            "get": {
+                "description": "Get PastWork",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "PastWorks"
+                ],
+                "summary": "Get PastWork",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PastWorks API wildcard",
+                        "name": "opus",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.PastWorkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update PastWork",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "PastWorks"
+                ],
+                "summary": "Update PastWork",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PastWorks API wildcard",
+                        "name": "opus",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update PastWork Request",
+                        "name": "UpdatePastWorkRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.PastWorkRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.PastWorkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete PastWork",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "PastWorks"
+                ],
+                "summary": "Delete PastWork",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PastWorks API wildcard",
+                        "name": "opus",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
                         }
                     },
                     "500": {
@@ -1350,10 +1578,7 @@
                     "type": "string"
                 },
                 "frameworks": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "locate_id": {
                     "type": "integer"
@@ -1365,10 +1590,7 @@
                     "type": "boolean"
                 },
                 "tech_tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -1461,6 +1683,20 @@
                 }
             }
         },
+        "domain.FollowResponse": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.GetRoomResponse": {
             "type": "object",
             "properties": {
@@ -1540,6 +1776,38 @@
                 }
             }
         },
+        "domain.ListPastWorkResponse": {
+            "type": "object",
+            "properties": {
+                "explanatory_text": {
+                    "type": "string"
+                },
+                "frameworks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/repository.Framework"
+                    }
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.PastWorkMembers"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "opus": {
+                    "type": "integer"
+                },
+                "tech_tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/repository.TechTag"
+                    }
+                }
+            }
+        },
         "domain.ListRoomHackathonInfo": {
             "type": "object",
             "properties": {
@@ -1614,6 +1882,87 @@
                 }
             }
         },
+        "domain.PastWorkMembers": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.PastWorkRequestBody": {
+            "type": "object",
+            "properties": {
+                "account_past_works": {
+                    "type": "string"
+                },
+                "explanatory_text": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "past_work_frameworks": {
+                    "type": "string"
+                },
+                "past_work_tags": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.PastWorkResponse": {
+            "type": "object",
+            "properties": {
+                "award_data_id": {
+                    "type": "integer"
+                },
+                "create_at": {
+                    "type": "string"
+                },
+                "explanatory_text": {
+                    "type": "string"
+                },
+                "frameworks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/repository.Framework"
+                    }
+                },
+                "is_delete": {
+                    "type": "boolean"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.PastWorkMembers"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "opus": {
+                    "type": "integer"
+                },
+                "tech_tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/repository.TechTag"
+                    }
+                },
+                "thumbnail_image": {
+                    "type": "string"
+                },
+                "update_at": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.RoomFramework": {
             "type": "object",
             "properties": {
@@ -1672,10 +2021,7 @@
                     "type": "string"
                 },
                 "frameworks": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "locate_id": {
                     "type": "integer"
@@ -1687,10 +2033,7 @@
                     "type": "boolean"
                 },
                 "tech_tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
